--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 10000;
+    z-index: 40;
 }
 
 header .logo
@@ -66,7 +66,7 @@ header ul li a
     margin-left: 20px;
     padding: 6px 15px;
     border-radius: 20px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 header ul li a:hover,
@@ -95,7 +95,7 @@ section::before
     width: 100%;
     height: 100px;
     background: linear-gradient(to top, #020912, transparent);
-    z-index: 10000;
+    z-index: 40;
 }
 
 section img
@@ -148,6 +148,44 @@ main p
     white-space: nowrap;
     text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
     z-index: 10;
+}
+
+#btn01
+{
+    position: fixed;
+    bottom: 20px; right: 20px;
+    background: #fff;
+    padding: 0.5em;
+    text-decoration: none;
+    border-radius: 20px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s ease-out;
+    z-index: 50;
+}
+
+#btn01 span
+{
+    font-size: 1.5em;
+    color: #412284;
+    transition: 0.3s ease-out;   
+}
+
+#btn01:hover
+{
+    background: #aab4c8;
+}
+
+#btn01:hover span
+{
+    transform: translateY(3px);
+}
+
+.rotate
+{
+    transform: rotate(180deg);
+    transition: 0.3s ease-in-out;
 }
 
 @media only screen and (min-width:320px)
@@ -240,7 +278,7 @@ main p
         background-size: 30px;
         background-position: center;
         background-repeat: no-repeat;
-        z-index: 1000;
+        z-index: 30;
     }
 
     nav.active
