--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header ul li a.active
     color: #2b1055;
 }
 
-section
+figure
 {
     position: relative;
     overflow: hidden;
@@ -88,7 +88,7 @@ section
     align-items: center;
 }
 
-section::before
+figure::before
 {
     content: '';
     position: absolute;
@@ -99,7 +99,7 @@ section::before
     z-index: 40;
 }
 
-section img
+figure img
 {
     position: absolute;
     top: 0; left: 0;
@@ -109,9 +109,9 @@ section img
     pointer-events: none;
 }
 
-section img#img04,
-section img#img07,
-section img#img11
+figure img#img04,
+figure img#img07,
+figure img#img11
 {
     mix-blend-mode: screen;
 }
@@ -126,10 +126,10 @@ main
 
 main h2
 {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 600;
     color: #fff;
-    margin-bottom: 0.5em;
+    margin: 0.5em 0em;
 }
 
 main p
@@ -141,12 +141,31 @@ main p
     text-justify: inter-word;
 }
 
+article
+{
+    margin-bottom: 1em;
+}
+
+details p
+{
+    padding-top: 10px;
+}
+
+summary
+{
+    cursor: pointer;
+    font-size: 1.15em;
+    font-weight: bold;
+    padding: 10px;
+    border-bottom: 2px solid #ccc;  
+}
+
 #txt01
 {
     position: absolute;
     color: #fff;
     font-size: 6em;
-    white-space: nowrap;
+    text-align: center;
     text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
     z-index: 10;
 }
@@ -183,23 +202,23 @@ main p
     transform: translateY(3px);
 }
 
-.rotate
-{
-    transform: rotate(180deg);
-    transition: 0.3s ease-in-out;
-}
-
 #disqus_thread
 {
     background: #020912;
     padding: 0em 6em;    
 }
 
+.rotate
+{
+    transform: rotate(180deg);
+    transition: 0.3s ease-in-out;
+}
+
 @media only screen and (min-width:320px)
 {
     #txt01
     {
-        font-size: 2.25em;
+        font-size: 3.5em;
     }
 }
 
@@ -207,15 +226,15 @@ main p
 {
     #txt01
     {
-        font-size: 3em;
+        font-size: 4.5em;
     }
 }
 
-@media only screen and (min-width:480px)
+@media only screen and (min-width:990px)
 {
     #txt01
     {
-        font-size: 4.5em;
+        font-size: 6em;
     }
 }
 
