--- a/style.css
+++ b/style.css
@@ -167,8 +167,10 @@ summary
     position: absolute;
     color: #fff;
     font-size: 6em;
+    line-height: 1;
     text-align: center;
     text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(-90px);
     z-index: 10;
 }
 
@@ -220,7 +222,7 @@ summary
 {
     #txt01
     {
-        font-size: 3.5em;
+        font-size: 3.5em; 
     }
 }
 
@@ -229,14 +231,6 @@ summary
     #txt01
     {
         font-size: 4.5em;
-    }
-}
-
-@media only screen and (min-width:990px)
-{
-    #txt01
-    {
-        font-size: 6em;
     }
 }
 
