--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ summary
     background: #fff;
     padding: 0.75em;
     text-decoration: none;
+    border: none;
     border-radius: 25px;
     display: inline-flex;
     justify-content: center;
