Integración de contenido y corrección de errores

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     font-family: 'Poppins', sans-serif;
     color: #fff;
     text-decoration: none;
+    scroll-behavior: smooth;
 }
 
 body
@@ -34,6 +35,18 @@ header
     z-index: 40;
 }
 
+h1
+{
+    position: absolute;
+    color: #fff;
+    font-size: 6em;
+    line-height: 1;
+    text-align: center;
+    text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(-90px);
+    z-index: 10;
+}
+
 header .logo
 {
     color: #fff;
@@ -44,9 +57,21 @@ header .logo
     text-decoration: none;
 }
 
+
 header ul
 {
+    display: none;
+}
+
+header ul.active
+{
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(2, 9, 18, 0.85);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -54,18 +79,18 @@ header ul
 header ul li
 {
     list-style: none;
-    margin-left: 20px;
+    margin-left: 0em;
 }
 
 header ul li a
 {
-    position: relative;
     font-size: 1.25em;
     font-weight: 600;
     color: #fff;
     text-decoration: none;
-    margin-left: 20px;
+    margin: 1em 0em;
     padding: 6px 15px;
+    display: inline-block;
     border-radius: 20px;
     transition: 0.5s;
 }
@@ -75,6 +100,29 @@ header ul li a.active
 {
     background: #fff;
     color: #2b1055;
+}
+
+nav
+{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    background: url('Pictures/Menu Interface/01.png');
+    background-size: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 30;
+}
+
+nav.active
+{
+    position: fixed;
+    top: 30px; right: 20px;
+    background: url('Pictures/Menu Interface/02.png');
+    background-size: 25px;
+    background-position: center;
+    background-repeat: no-repeat;  
 }
 
 figure
@@ -134,18 +182,62 @@ main h2
     margin: 0.5em 0em;
 }
 
+main h3
+{
+    font-size: 1.5em;
+    font-weight: 600;
+    color: #fff;
+    margin: 0.5em 0em;
+}
+
 main p
 {
-    font-size: 1.15em;
+    font-size: 1.25em;
     font-weight: 300;
     color: #fff;
     text-align: justify;
     text-justify: inter-word;
+    hyphens: auto;
+    word-spacing: -1px;
 }
 
-article
+section
+{
+    padding-top: 1em;
+}
+
+section.subsection
+{
+    padding-top: 0em;
+}
+
+article.inbetween
 {
     margin-bottom: 1em;
+}
+
+article.creatures
+{
+    display: flex;
+    align-items: center;
+}
+
+article img
+{
+    width: 25%;
+    margin-right: 0.75em;
+}
+
+article p
+{
+    flex: 1;
+}
+
+iframe {
+    border: 0;
+    width: 50%;
+    height: 50%;
+    aspect-ratio: 16/9;
 }
 
 details p
@@ -156,22 +248,19 @@ details p
 summary
 {
     cursor: pointer;
-    font-size: 1.15em;
+    font-size: 1.25em;
     font-weight: bold;
     padding: 10px;
+    text-align: justify;
+    text-justify: inter-word;
+    hyphens: auto;
+    word-spacing: -1px;
     border-bottom: 2px solid #ccc;  
 }
 
-#txt01
+#section02 p
 {
-    position: absolute;
-    color: #fff;
-    font-size: 6em;
-    line-height: 1;
-    text-align: center;
-    text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
-    transform: translateY(-90px);
-    z-index: 10;
+    color: #ccc;
 }
 
 #btn01
@@ -213,6 +302,16 @@ summary
     padding: 0em 6em;    
 }
 
+.trailer
+{
+    position: relative;
+    width: 100%;
+    margin: 1.5em 0em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .rotate
 {
     transform: rotate(180deg);
@@ -221,7 +320,7 @@ summary
 
 @media only screen and (min-width:320px)
 {
-    #txt01
+    h1
     {
         font-size: 3.5em; 
     }
@@ -229,7 +328,7 @@ summary
 
 @media only screen and (min-width:425px)
 {
-    #txt01
+    h1
     {
         font-size: 4.5em;
     }
@@ -237,7 +336,7 @@ summary
 
 @media only screen and (min-width:990px)
 {
-    #txt01
+    h1
     {
         font-size: 6em;
         transform: translateY(-130px);
@@ -261,60 +360,6 @@ summary
         font-size: 1.5em;
     }
 
-    header ul
-    {
-        display: none;
-    }
-
-    header ul.active
-    {
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%;
-        height: 100vh;
-        background: rgba(2, 9, 18, 0.85);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    header ul li
-    {
-        margin-left: 0;
-    }
-
-    header ul li a
-    {
-        font-size: 1.15em;
-        margin: 1em 0;
-        display: inline-block;
-        border-radius: 20px;
-    }
-
-    nav
-    {
-        position: relative;
-        width: 30px;
-        height: 30px;
-        cursor: pointer;
-        background: url('Pictures/Menu Interface/01.png');
-        background-size: 30px;
-        background-position: center;
-        background-repeat: no-repeat;
-        z-index: 30;
-    }
-
-    nav.active
-    {
-        position: fixed;
-        top: 20px; right: 20px;
-        background: url('Pictures/Menu Interface/02.png');
-        background-size: 25px;
-        background-position: center;
-        background-repeat: no-repeat;   
-    }
-
     main
     {
         padding: 3em 1.5em;
@@ -325,8 +370,33 @@ summary
         font-size: 1.5em;
     }
 
+    main h3
+    {
+        font-size: 1.25em;
+    }
+
+    article.creatures
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    article img
+    {
+        width: 75%;
+        margin-bottom: 1em;
+    }
+
+    .trailer iframe
+    {
+        width: 100%;
+        height: 100%;
+    }
+
     #disqus_thread
     {
-    padding: 0em 1.5em;    
+        padding: 0em 1.5em;    
     }
 }
