--- a/style.css
+++ b/style.css
@@ -311,7 +311,15 @@ summary
     justify-content: center;
     align-items: center;
 }
-
+.song
+{
+    position: relative;
+    width: 100%;
+    margin: 1.5em 0em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .rotate
 {
     transform: rotate(180deg);
