--- a/style.css
+++ b/style.css
@@ -35,29 +35,6 @@ header
     z-index: 40;
 }
 
-h1
-{
-    position: absolute;
-    color: #fff;
-    font-size: 6em;
-    line-height: 1;
-    text-align: center;
-    text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
-    transform: translateY(-90px);
-    z-index: 10;
-}
-
-header .logo
-{
-    color: #fff;
-    font-weight: 600;
-    font-size: 2em;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-decoration: none;
-}
-
-
 header ul
 {
     display: none;
@@ -100,6 +77,26 @@ header ul li a.active
 {
     background: #fff;
     color: #2b1055;
+}
+
+h1
+{
+    position: absolute;
+    color: #fff;
+    font-size: 6em;
+    line-height: 1;
+    text-align: center;
+    text-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
+    transform: translateY(-90px);
+    z-index: 10;
+}
+
+a img
+{
+    position: relative;
+    top: 0; left: 0;
+    width: 64px;
+    height: 64px;
 }
 
 nav
@@ -170,7 +167,7 @@ main
 {
     position: relative;
     background: #020912;
-    padding: 3em 6em 0.5em;
+    padding: 3em 6em 0em;
     z-index: 20;
 }
 
@@ -233,8 +230,8 @@ article p
     flex: 1;
 }
 
-iframe {
-    border: 0;
+video
+{
     width: 50%;
     height: 50%;
     aspect-ratio: 16/9;
@@ -294,12 +291,6 @@ summary
 #btn01:hover span
 {
     transform: translateY(3px);
-}
-
-#disqus_thread
-{
-    background: #020912;
-    padding: 0em 6em;    
 }
 
 .trailer
@@ -362,7 +353,7 @@ summary
 
     main
     {
-        padding: 3em 1.5em;
+        padding: 3em 1.5em 0em;
     }
 
     main h2
@@ -389,14 +380,9 @@ summary
         margin-bottom: 1em;
     }
 
-    .trailer iframe
+    video
     {
         width: 100%;
         height: 100%;
-    }
-
-    #disqus_thread
-    {
-        padding: 0em 1.5em;    
     }
 }
