--- a/style.css
+++ b/style.css
@@ -241,12 +241,6 @@ article.creatures
     align-items: center;
 }
 
-article img
-{
-    width: 25%;
-    margin-right: 0.75em;
-}
-
 article p
 {
     flex: 1;
@@ -254,9 +248,8 @@ article p
 
 video
 {
-    width: 50%;
-    height: 50%;
     aspect-ratio: 16/9;
+    border: 1px solid #ccc;
 }
 
 details p
@@ -332,6 +325,18 @@ summary
     {
         font-size: 3.5em; 
     }
+
+    video
+    {
+        width: 100%;
+        height: 100%;
+    }
+
+    article img
+    {
+        width: 75%;
+        margin-bottom: 1em;
+    }
 }
 
 @media only screen and (min-width:425px)
@@ -342,12 +347,48 @@ summary
     }
 }
 
+@media only screen and (min-width:768px)
+{
+    video
+    {
+        width: 75%;
+        height: 75%;
+    }
+
+    article img
+    {
+        width: 50%;
+        margin-bottom: 1em;
+    }
+}
+
 @media only screen and (min-width:990px)
 {
     figure h1
     {
         font-size: 6em;
         transform: translateY(-130px);
+    }
+
+    video
+    {
+        width: 50%;
+        height: 50%;
+    }
+
+    article img
+    {
+        width: 35%;
+        margin-bottom: 1em;
+    }
+}
+
+@media only screen and (min-width:1440px)
+{
+    article img
+    {
+        width: 25%;
+        margin-right: 0.75em;
     }
 }
 
@@ -394,17 +435,5 @@ summary
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    article img
-    {
-        width: 75%;
-        margin-bottom: 1em;
-    }
-
-    video
-    {
-        width: 100%;
-        height: 100%;
     }
 }
