--- a/style.css
+++ b/style.css
@@ -393,6 +393,12 @@ summary
 
 @media only screen and (min-width:768px)
 {
+    figure h2
+    {
+        font-size: 2em;
+        transform: translateY(-15px);  
+    }
+
     video
     {
         width: 75%;
@@ -425,6 +431,12 @@ summary
     {
         font-size: 6em;
         transform: translateY(-130px);
+    }
+
+    figure h2
+    {
+        font-size: 2.5em;
+        transform: translateY(-45px);
     }
 
     video
@@ -469,11 +481,6 @@ summary
     header .logo
     {
         font-size: 1.5em;
-    }
-
-    figure h2
-    {
-        font-size: 2.5em;   
     }
 
     main
