--- a/style.css
+++ b/style.css
@@ -457,6 +457,14 @@ summary
     }
 }
 
+@media only screen and (min-width:1024px)
+{
+    figure h2
+    {
+        font-size: 3em;
+    }
+}
+
 @media only screen and (min-width:1440px)
 {
     article img
